melhorando funcionalidade do Jquery

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
             <link rel="stylesheet" href="./main.css">
         </head>
         <body>
-            <div class="container">
-            <header>
-            <h1>Lista de Tarefas</h1>
-            </header>
-        <form id="form-tarefa">
-                <input type="text" id="nome-tarefa" required placeholder="Nome da Tarefa"/>
+        <header>
+                <h1>Lista de Tarefas</h1>
+        </header>
+        <form>
+                <input type="text" required placeholder="Nome da Tarefa"/>
                 <button type="submit">Cadastrar</button>
         </form>
-        <li>
-        </li>
-            </div>
+        <div class="container">
+            <ul>
+            </ul>
+        </div>
             <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
             <script src="./main.js"></script>
         </body>
